Fix colors and contrast

--- a/src/_components/_headline/_headline.sass
+++ b/src/_components/_headline/_headline.sass
@@ -6,7 +6,7 @@ $fs-lead: 22px
 header.hd__Container
   padding: 100px 0
   background-color: $mainDark
-  color: $light
+  color: #FFF
 
   &.small
     padding: 50px 0
@@ -29,4 +29,4 @@ header.hd__Container
       @extend .paragraphSubtitle
       margin-top: 15px
       font-weight: lighter
-      opacity: 0.45
+      color: $light
