--- a/src/_components/_sideNav/_sideNav.sass
+++ b/src/_components/_sideNav/_sideNav.sass
@@ -24,7 +24,7 @@
     left: 0
     bottom: 0
     width: 300px
-    background-color: $light
+    background-color: #FFF
     box-shadow: 0 0 8px rgba(0,0,0,0.4)
 
     transform: translateX(-103%)
