--- a/src/_partials/_colors.sass
+++ b/src/_partials/_colors.sass
@@ -2,7 +2,7 @@
 
 $dark: #282828
 $grey: #efefef
-$light: #FFF
+$light: #BFBEC0
 $accent: #A80707
 
 // Branding
