--- a/src/main.sass
+++ b/src/main.sass
@@ -20,7 +20,6 @@ $fs-lead: 22px
 
 section.info__Container
   margin: 25px 0
-  // background-color: $grey
 
   .row
     display: flex
@@ -63,7 +62,7 @@ section.info__Container
     margin: 50px -25px
     padding: 50px 0
     background-color: $mainLight
-    color: $light
+    color: #FFF
     transform: rotateZ(-5deg)
 
     .row
@@ -103,13 +102,14 @@ section.cta__Container
       @extend .pargraphTitle
       font-size: $fs-headline
       font-weight: lighter
+      color: #FFF
       text-transform: uppercase
-      color: $light
 
     .cta__Button
       @extend .button
-      border: 2px solid $light
+      border: 2px solid #FFF
       background: transparent
+      color: #FFF
       font-size: $fs-lead
       text-transform: uppercase
       cursor: pointer
@@ -118,7 +118,7 @@ section.cta__Container
     margin: 50px -25px
     padding: 50px 0
     background-color: $mainLight
-    color: $light
+    color: #FFF
     transform: rotateZ(5deg)
 
     .wrapper
